--- a/src/convolution_for_C_decompilation.ipynb
+++ b/src/convolution_for_C_decompilation.ipynb
@@ -2,19 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import glob\n",
-    "import os"
+    "import os\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def weight_variable(shape):\n",
@@ -91,120 +96,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "do_things ELSE,0:SWITCH,0:DO,0:FOR,1:IF,0:WHILE,0:CALL,1:functions,0 20\n",
-      "0x400646 0x55 push rbp 4 A21.c FUNCTION_1\n",
-      "0x400647 0x4889e5 mov rbp, rsp 4 A21.c FUNCTION_1\n",
-      "0x40064a 0x4883ec10 sub rsp, 0x10 4 A21.c FUNCTION_1\n",
-      "0x40064e 0xc745f8020000 mov dword [rbp - 8], 2 5 A21.c FUNCTION_1\n",
-      "0x400655 0xc745fc000000 mov dword [rbp - 4], 0 6 A21.c FUNCTION_1:FOR_1\n",
-      "0x40065c 0xeb0e jmp 0x40066c 6 A21.c FUNCTION_1:FOR_1\n",
-      "0x40065e 0x8b45f8 mov eax, dword [rbp - 8] 6 A21.c FUNCTION_1:FOR_1\n",
-      "0x400661 0xfaf45f8 imul eax, dword [rbp - 8] 6 A21.c FUNCTION_1:FOR_1\n",
-      "0x400665 0x8945f8 mov dword [rbp - 8], eax 6 A21.c FUNCTION_1:FOR_1\n",
-      "0x400668 0x8345fc01 add dword [rbp - 4], 1 6 A21.c FUNCTION_1:FOR_1\n",
-      "0x40066c 0x837dfc02 cmp dword [rbp - 4], 2 6 A21.c FUNCTION_1:FOR_1\n",
-      "0x400670 0x7eec jle 0x40065e 6 A21.c FUNCTION_1:FOR_1\n",
-      "0x400672 0x8b45f8 mov eax, dword [rbp - 8] 7 A21.c FUNCTION_1:CALL_1\n",
-      "0x400675 0x89c6 mov esi, eax 7 A21.c FUNCTION_1:CALL_1\n",
-      "0x400677 0xbf74084000 mov edi, 0x400874 7 A21.c FUNCTION_1:CALL_1\n",
-      "0x40067c 0xb800000000 mov eax, 0 7 A21.c FUNCTION_1:CALL_1\n",
-      "0x400681 0xe88afeffff call sym.imp.printf 7 A21.c FUNCTION_1:CALL_1\n",
-      "0x400686 0x90 nop 8 A21.c FUNCTION_1\n",
-      "0x400687 0xc9 leave 9 A21.c FUNCTION_1\n",
-      "0x400688 0xc3 ret 9 A21.c FUNCTION_1\n",
-      "main ELSE,2:SWITCH,0:DO,0:FOR,3:IF,2:WHILE,1:CALL,7:functions,0 79\n",
-      "0x400689 0x55 push rbp 12 A21.c FUNCTION_1\n",
-      "0x40068a 0x4889e5 mov rbp, rsp 12 A21.c FUNCTION_1\n",
-      "0x40068d 0x4883ec30 sub rsp, 0x30 12 A21.c FUNCTION_1\n",
-      "0x400691 0x64488b042528 mov rax, qword fs:[0x28] 12 A21.c FUNCTION_1\n",
-      "0x40069a 0x488945f8 mov qword [rbp - 8], rax 12 A21.c FUNCTION_1\n",
-      "0x40069e 0x31c0 xor eax, eax 12 A21.c FUNCTION_1\n",
-      "0x4006a0 0xc745e4000000 mov dword [rbp - 0x1c], 0 14 A21.c FUNCTION_1\n",
-      "0x4006a7 0x488d45d8 lea rax, [rbp - 0x28] 15 A21.c FUNCTION_1:CALL_1\n",
-      "0x4006ab 0x4889c6 mov rsi, rax 15 A21.c FUNCTION_1:CALL_1\n",
-      "0x4006ae 0xbf74084000 mov edi, 0x400874 15 A21.c FUNCTION_1:CALL_1\n",
-      "0x4006b3 0xb800000000 mov eax, 0 15 A21.c FUNCTION_1:CALL_1\n",
-      "0x4006b8 0xe873feffff call sym.imp.__isoc99_scanf 15 A21.c FUNCTION_1:CALL_1\n",
-      "0x4006bd 0xc745e8000000 mov dword [rbp - 0x18], 0 16 A21.c FUNCTION_1:FOR_2\n",
-      "0x4006c4 0xeb1b jmp 0x4006e1 16 A21.c FUNCTION_1:FOR_2\n",
-      "0x4006c6 0xc745ec000000 mov dword [rbp - 0x14], 0 17 A21.c FUNCTION_1:FOR_2:FOR_3\n",
-      "0x4006cd 0xeb08 jmp 0x4006d7 17 A21.c FUNCTION_1:FOR_2:FOR_3\n",
-      "0x4006cf 0x8345e401 add dword [rbp - 0x1c], 1 18 A21.c FUNCTION_1:FOR_2:FOR_3\n",
-      "0x4006d3 0x8345ec01 add dword [rbp - 0x14], 1 17 A21.c FUNCTION_1:FOR_2:FOR_3\n",
-      "0x4006d7 0x837dec02 cmp dword [rbp - 0x14], 2 17 A21.c FUNCTION_1:FOR_2:FOR_3\n",
-      "0x4006db 0x7ef2 jle 0x4006cf 17 A21.c FUNCTION_1:FOR_2:FOR_3\n",
-      "0x4006dd 0x8345e801 add dword [rbp - 0x18], 1 16 A21.c FUNCTION_1:FOR_2\n",
-      "0x4006e1 0x837de802 cmp dword [rbp - 0x18], 2 16 A21.c FUNCTION_1:FOR_2\n",
-      "0x4006e5 0x7edf jle 0x4006c6 16 A21.c FUNCTION_1:FOR_2\n",
-      "0x4006e7 0xe9b6000000 jmp 0x4007a2 19 A21.c FUNCTION_1:WHILE_2\n",
-      "0x4006ec 0xc745e0000000 mov dword [rbp - 0x20], 0 21 A21.c FUNCTION_1:WHILE_2\n",
-      "0x4006f3 0x488d45dc lea rax, [rbp - 0x24] 23 A21.c FUNCTION_1:WHILE_2:CALL_2\n",
-      "0x4006f7 0x4889c6 mov rsi, rax 23 A21.c FUNCTION_1:WHILE_2:CALL_2\n",
-      "0x4006fa 0xbf74084000 mov edi, 0x400874 23 A21.c FUNCTION_1:WHILE_2:CALL_2\n",
-      "0x4006ff 0xb800000000 mov eax, 0 23 A21.c FUNCTION_1:WHILE_2:CALL_2\n",
-      "0x400704 0xe827feffff call sym.imp.__isoc99_scanf 23 A21.c FUNCTION_1:WHILE_2:CALL_2\n",
-      "0x400709 0xc745f0000000 mov dword [rbp - 0x10], 0 25 A21.c FUNCTION_1:WHILE_2:FOR_3\n",
-      "0x400710 0xeb59 jmp 0x40076b 25 A21.c FUNCTION_1:WHILE_2:FOR_3\n",
-      "0x400712 0x488d45e0 lea rax, [rbp - 0x20] 27 A21.c FUNCTION_1:WHILE_2:FOR_3:CALL_3\n",
-      "0x400716 0x4889c6 mov rsi, rax 27 A21.c FUNCTION_1:WHILE_2:FOR_3:CALL_3\n",
-      "0x400719 0xbf74084000 mov edi, 0x400874 27 A21.c FUNCTION_1:WHILE_2:FOR_3:CALL_3\n",
-      "0x40071e 0xb800000000 mov eax, 0 27 A21.c FUNCTION_1:WHILE_2:FOR_3:CALL_3\n",
-      "0x400723 0xe808feffff call sym.imp.__isoc99_scanf 27 A21.c FUNCTION_1:WHILE_2:FOR_3:CALL_3\n",
-      "0x400728 0x837df000 cmp dword [rbp - 0x10], 0 28 A21.c FUNCTION_1:WHILE_2:FOR_3:IF_4\n",
-      "0x40072c 0x7410 je 0x40073e 28 A21.c FUNCTION_1:WHILE_2:FOR_3:IF_4\n",
-      "0x40072e 0xf30f1045f4 movss xmm0, dword [rbp - 0xc] 30 A21.c FUNCTION_1:WHILE_2:FOR_3:IF_4\n",
-      "0x400733 0xf30f58c0 addss xmm0, xmm0 30 A21.c FUNCTION_1:WHILE_2:FOR_3:IF_4\n",
-      "0x400737 0xf30f1145f4 movss dword [rbp - 0xc], xmm0 30 A21.c FUNCTION_1:WHILE_2:FOR_3:IF_4\n",
-      "0x40073c 0xeb0d jmp 0x40074b 30 A21.c FUNCTION_1:WHILE_2:FOR_3:IF_4\n",
-      "0x40073e 0xf30f10053a01 movss xmm0, dword [0x00400880] 33 A21.c FUNCTION_1:WHILE_2:FOR_3:ELSE_4\n",
-      "0x400746 0xf30f1145f4 movss dword [rbp - 0xc], xmm0 33 A21.c FUNCTION_1:WHILE_2:FOR_3:ELSE_4\n",
-      "0x40074b 0x8b45e0 mov eax, dword [rbp - 0x20] 35 A21.c FUNCTION_1:WHILE_2:FOR_3\n",
-      "0x40074e 0x660fefc0 pxor xmm0, xmm0 35 A21.c FUNCTION_1:WHILE_2:FOR_3\n",
-      "0x400752 0xf30f2ac0 cvtsi2ss xmm0, eax 35 A21.c FUNCTION_1:WHILE_2:FOR_3\n",
-      "0x400756 0xf30f104df4 movss xmm1, dword [rbp - 0xc] 35 A21.c FUNCTION_1:WHILE_2:FOR_3\n",
-      "0x40075b 0xf30f5cc8 subss xmm1, xmm0 35 A21.c FUNCTION_1:WHILE_2:FOR_3\n",
-      "0x40075f 0xf28c1 movaps xmm0, xmm1 35 A21.c FUNCTION_1:WHILE_2:FOR_3\n",
-      "0x400762 0xf30f1145f4 movss dword [rbp - 0xc], xmm0 35 A21.c FUNCTION_1:WHILE_2:FOR_3\n",
-      "0x400767 0x8345f001 add dword [rbp - 0x10], 1 25 A21.c FUNCTION_1:WHILE_2:FOR_3\n",
-      "0x40076b 0x8b45dc mov eax, dword [rbp - 0x24] 25 A21.c FUNCTION_1:WHILE_2:FOR_3\n",
-      "0x40076e 0x3945f0 cmp dword [rbp - 0x10], eax 25 A21.c FUNCTION_1:WHILE_2:FOR_3\n",
-      "0x400771 0x7c9f jl 0x400712 25 A21.c FUNCTION_1:WHILE_2:FOR_3\n",
-      "0x400773 0xe8cefeffff call sym.do_things 37 A21.c FUNCTION_1:WHILE_2:CALL_2\n",
-      "0x400778 0x660fefc0 pxor xmm0, xmm0 38 A21.c FUNCTION_1:WHILE_2:IF_3\n",
-      "0x40077c 0xf2e45f4 ucomiss xmm0, dword [rbp - 0xc] 38 A21.c FUNCTION_1:WHILE_2:IF_3\n",
-      "0x400780 0x7a16 jp 0x400798 38 A21.c FUNCTION_1:WHILE_2:IF_3\n",
-      "0x400782 0x660fefc0 pxor xmm0, xmm0 38 A21.c FUNCTION_1:WHILE_2:IF_3\n",
-      "0x400786 0xf2e45f4 ucomiss xmm0, dword [rbp - 0xc] 38 A21.c FUNCTION_1:WHILE_2:IF_3\n",
-      "0x40078a 0x750c jne 0x400798 38 A21.c FUNCTION_1:WHILE_2:IF_3\n",
-      "0x40078c 0xbf77084000 mov edi, 0x400877 40 A21.c FUNCTION_1:WHILE_2:IF_3:CALL_3\n",
-      "0x400791 0xe85afdffff call sym.imp.puts 40 A21.c FUNCTION_1:WHILE_2:IF_3:CALL_3\n",
-      "0x400796 0xeb0a jmp 0x4007a2 40 A21.c FUNCTION_1:WHILE_2:IF_3:CALL_3\n",
-      "0x400798 0xbf7b084000 mov edi, 0x40087b 43 A21.c FUNCTION_1:WHILE_2:ELSE_3:CALL_3\n",
-      "0x40079d 0xe84efdffff call sym.imp.puts 43 A21.c FUNCTION_1:WHILE_2:ELSE_3:CALL_3\n",
-      "0x4007a2 0x8b45d8 mov eax, dword [rbp - 0x28] 19 A21.c FUNCTION_1:WHILE_2\n",
-      "0x4007a5 0x8d50ff lea edx, [rax - 1] 19 A21.c FUNCTION_1:WHILE_2\n",
-      "0x4007a8 0x8955d8 mov dword [rbp - 0x28], edx 19 A21.c FUNCTION_1:WHILE_2\n",
-      "0x4007ab 0x85c0 test eax, eax 19 A21.c FUNCTION_1:WHILE_2\n",
-      "0x4007ad 0xf8539ffffff jne 0x4006ec 19 A21.c FUNCTION_1:WHILE_2\n",
-      "0x4007b3 0x8b45e4 mov eax, dword [rbp - 0x1c] 46 A21.c FUNCTION_1:CALL_1\n",
-      "0x4007b6 0x89c6 mov esi, eax 46 A21.c FUNCTION_1:CALL_1\n",
-      "0x4007b8 0xbf74084000 mov edi, 0x400874 46 A21.c FUNCTION_1:CALL_1\n",
-      "0x4007bd 0xb800000000 mov eax, 0 46 A21.c FUNCTION_1:CALL_1\n",
-      "0x4007c2 0xe849fdffff call sym.imp.printf 46 A21.c FUNCTION_1:CALL_1\n",
-      "0x4007c7 0xb800000000 mov eax, 0 47 A21.c FUNCTION_1\n"
+      "{'FOR': [(4, 8), (32, 11), (34, 6), (50, 26)], 'CALL': [(12, 5), (27, 5), (45, 5), (52, 5), (76, 1), (83, 3), (86, 2), (93, 5)], 'IF': [(57, 6), (77, 9)], 'ELSE': [(63, 2), (86, 2)], 'WHILE': [(43, 50)], 'DO': [], 'SWITCH': [], 'FUNCTION': [(0, 20), (20, 79)]}\n"
      ]
     }
    ],
    "source": [
+    "#data preparation\n",
+    "\n",
     "home=os.getenv(\"HOME\")\n",
     "source=\"/C_bytecode_analysis/output\"\n",
+    "data=[]\n",
+    "number_of_lines=0\n",
+    "offset=0\n",
+    "data_label_dict={}\n",
+    "for x in [\"FOR\",\"CALL\",\"IF\",\"ELSE\",\"WHILE\",\"DO\",\"SWITCH\",\"FUNCTION\"]:\n",
+    "    data_label_dict[x]=[]\n",
+    "\n",
     "for filename in glob.glob(os.path.join(home+source,'*.labeled_addresses')):\n",
     "    with open(filename) as f:\n",
     "        lines = f.readlines()\n",
@@ -213,22 +127,58 @@
     "            if len(line)==3:\n",
     "                func_name=line[0]\n",
     "                classes=line[1]\n",
-    "                number_of_lines=line[2]\n",
-    "                print (func_name, classes, number_of_lines)\n",
+    "                number_of_lines=int(line[2])\n",
+    "                label_list=[]\n",
+    "                offset=len(data)\n",
+    "                #print (func_name, classes, number_of_lines)\n",
     "            else:\n",
-    "                address = line[0]\n",
+    "                #address = line[0]\n",
     "                bytecode = line[1].strip()\n",
-    "                instruction = line[2].strip()\n",
-    "                source_line = int(line[3])\n",
-    "                source_file = line[4]\n",
-    "                labels = \":\".join(line[5:])\n",
-    "                print (address,bytecode,instruction,source_line,source_file,labels)"
+    "                #instruction = line[2].strip()\n",
+    "                #source_line = int(line[3])\n",
+    "                #source_file = line[4]\n",
+    "                labels = line[5:]\n",
+    "                label_list.append(labels)\n",
+    "                #print (address,bytecode,instruction,source_line,source_file,labels)\n",
+    "                indexes= (str(bytecode))[2:4]\n",
+    "                if len(bytecode)==4:\n",
+    "                    indexes+=\"gg\"\n",
+    "                else:\n",
+    "                    indexes+=(str(bytecode))[4:6]\n",
+    "                new=[]\n",
+    "                for x in indexes:\n",
+    "                        pom=[0]*16\n",
+    "                        if x!=\"g\":\n",
+    "                            pom[int(x,16)]=1\n",
+    "                        new.extend(pom)\n",
+    "                data.append(np.array(new))\n",
+    "                number_of_lines-=1\n",
+    "                if number_of_lines==0:\n",
+    "                    cur=[]\n",
+    "                    counter={}\n",
+    "                    start_dict={}\n",
+    "                    i=-1\n",
+    "                    for labels in label_list:\n",
+    "                        i+=1\n",
+    "                        for label in labels:\n",
+    "                            if label not in cur:\n",
+    "                                cur.append(label)\n",
+    "                                counter[label]=1\n",
+    "                                start_dict[label]=i\n",
+    "                            else:\n",
+    "                                counter[label]+=1\n",
+    "                    for label in counter.keys():\n",
+    "                        data_label_dict[label.split(\"_\")[0]].append((start_dict[label]+offset,counter[label]))\n",
+    "                                \n",
+    "        print(data_label_dict)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -249,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
