configurable convolution graph initializer

--- a/src/convolution_for_C_decompilation.ipynb
+++ b/src/convolution_for_C_decompilation.ipynb
@@ -2,11 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/fran/anaconda3/envs/tensorflow/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import glob\n",
@@ -16,82 +23,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def weight_variable(shape):\n",
-    "  initial = tf.truncated_normal(shape, stddev=0.1)\n",
-    "  return tf.Variable(initial)\n",
-    "\n",
-    "def bias_variable(shape):\n",
-    "  initial = tf.constant(0.1, shape=shape)\n",
-    "  return tf.Variable(initial)\n",
-    "\n",
-    "def conv2d(x, W):\n",
-    "  return tf.nn.conv2d(x, W, strides=[1, 1, 1, 1], padding='SAME')\n",
-    "\n",
-    "def max_pool_2x2(x):\n",
-    "  return tf.nn.max_pool(x, ksize=[1, 2, 2, 1],\n",
-    "                        strides=[1, 2, 2, 1], padding='SAME')\n",
-    "\n",
-    "def convolution_graph(param_lambda=0.01):\n",
-    "    x = tf.placeholder(tf.float32, shape=[None, 784])\n",
-    "    y_ = tf.placeholder(tf.float32, shape=[None, 10])\n",
-    "\n",
-    "\n",
-    "    x_input= tf.reshape(x, [-1, 28, 28, 1])\n",
-    "\n",
-    "    W_conv1 = weight_variable([5, 5, 1, 16])\n",
-    "    b_conv1 = bias_variable([16])\n",
-    "\n",
-    "    h_conv1 = tf.nn.relu(conv2d(x_input, W_conv1) + b_conv1)\n",
-    "    h_pool1 = max_pool_2x2(h_conv1)\n",
-    "    print (h_pool1.shape)\n",
-    "\n",
-    "    W_conv2 = weight_variable([5, 5, 16, 32])\n",
-    "    b_conv2 = bias_variable([32])\n",
-    "\n",
-    "    h_conv2 = tf.nn.relu(conv2d(h_pool1, W_conv2) + b_conv2)\n",
-    "    h_pool2 = max_pool_2x2(h_conv2)\n",
-    "\n",
-    "    W_fc1 = weight_variable([7 * 7 * 32, 512])\n",
-    "    b_fc1 = bias_variable([512])\n",
-    "\n",
-    "    h_pool2_flat = tf.reshape(h_pool2, [-1, 7*7*32])\n",
-    "    h_fc1 = tf.nn.relu(tf.matmul(h_pool2_flat, W_fc1) + b_fc1)\n",
-    "\n",
-    "    keep_prob = tf.placeholder(tf.float32)\n",
-    "    h_fc1_drop = tf.nn.dropout(h_fc1, keep_prob)\n",
-    "\n",
-    "    W_fc2 = weight_variable([512, 10])\n",
-    "    b_fc2 = bias_variable([10])\n",
-    "\n",
-    "    y_conv = tf.matmul(h_fc1_drop, W_fc2) + b_fc2\n",
-    "\n",
-    "    l2=sum([param_lambda*tf.nn.l2_loss(x) for x in [W_conv2,W_conv1,W_fc2,W_fc1]])\n",
-    "\n",
-    "    cross_entropy = tf.reduce_mean(\n",
-    "        tf.nn.softmax_cross_entropy_with_logits(labels=y_, logits=y_conv))+l2\n",
-    "    train_step = tf.train.AdamOptimizer(1e-4).minimize(cross_entropy)\n",
-    "    correct_prediction = tf.equal(tf.argmax(y_conv, 1), tf.argmax(y_, 1))\n",
-    "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
+    "class ConvNet:\n",
+    "    @staticmethod\n",
+    "    def weight_variable(shape):\n",
+    "      initial = tf.truncated_normal(shape, stddev=0.1)\n",
+    "      return tf.Variable(initial)\n",
     "    \n",
-    "def train():\n",
-    "    with tf.Session() as sess:\n",
-    "      sess.run(tf.global_variables_initializer())\n",
-    "      for i in range(300):\n",
-    "        batch = mnist.train.next_batch(50)\n",
-    "        if i % 100 == 0:\n",
-    "          train_accuracy = accuracy.eval(feed_dict={\n",
-    "              x: batch[0], y_: batch[1], keep_prob: 1.0})\n",
-    "          print('step %d, training accuracy %g' % (i, train_accuracy))\n",
-    "        train_step.run(feed_dict={x: batch[0], y_: batch[1], keep_prob: 0.5})\n",
+    "    @staticmethod\n",
+    "    def bias_variable(shape):\n",
+    "      initial = tf.constant(0.1, shape=shape)\n",
+    "      return tf.Variable(initial)\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def conv2d(x, W):\n",
+    "      return tf.nn.conv2d(x, W, strides=[1, 1, 1, 1], padding='SAME')\n",
     "\n",
-    "      #print('test accuracy %g' % accuracy.eval(feed_dict={\n",
-    "    #      x: mnist.test.images, y_: mnist.test.labels, keep_prob: 1.0}))"
+    "    @staticmethod\n",
+    "    def max_pool_shape(x, shape=[1,2,2,1]):\n",
+    "      return tf.nn.max_pool(x, ksize=shape,\n",
+    "                            strides=shape, padding='SAME')\n",
+    "\n",
+    "    def convolution_graph(self,conv_shape=[[5,5,1,16],[5,5,16,32]],fc_shape=[512,10], param_lambda=0.01):\n",
+    "        \n",
+    "        self.x = tf.placeholder(tf.float32, shape=[None, 784])\n",
+    "        self.y_ = tf.placeholder(tf.float32, shape=[None, 10])\n",
+    "        self.W_conv=[]\n",
+    "        self.b_conv=[]\n",
+    "        self.h_conv=[]\n",
+    "        self.h_pool=[]\n",
+    "        \n",
+    "        self.x_input= tf.reshape(self.x, [-1, 28, 28, 1])\n",
+    "        self.layer_input=[]\n",
+    "        self.layer_input.append(self.x_input)\n",
+    "        #print (self.layer_input[-1].shape)\n",
+    "        \n",
+    "        for i in range(len(conv_shape)):\n",
+    "            self.W_conv.append(self.weight_variable(conv_shape[i]))\n",
+    "            self.b_conv.append(self.bias_variable([conv_shape[i][-1]]))\n",
+    "\n",
+    "            self.h_conv.append(tf.nn.relu(self.conv2d(self.layer_input[-1], self.W_conv[-1]) + self.b_conv[-1]))\n",
+    "            self.layer_input.append(self.max_pool_shape(self.h_conv[-1]))\n",
+    "            #print (self.layer_input[-1].shape)\n",
+    "        \n",
+    "        fc_input_shape=[]\n",
+    "        a=1\n",
+    "        for b in self.layer_input[-1].shape[1:]:\n",
+    "            a*=int(b)\n",
+    "        fc_input_shape.append(a)\n",
+    "        \n",
+    "        self.W_fc=[]\n",
+    "        self.b_fc=[]\n",
+    "        self.h_pool_flat=[]\n",
+    "        \n",
+    "        \n",
+    "        for i in range(len(fc_shape[:-1])):\n",
+    "            \n",
+    "            self.W_fc.append(weight_variable([fc_input_shape[-1], fc_shape[i]]))\n",
+    "            self.b_fc.append(bias_variable([fc_shape[i]]))\n",
+    "\n",
+    "            self.h_pool_flat.append(tf.reshape(self.layer_input[-1], [-1, fc_input_shape[-1]]))\n",
+    "            self.layer_input.append(tf.nn.relu(tf.matmul(self.h_pool_flat[-1], self.W_fc[-1]) + self.b_fc[-1]))\n",
+    "            \n",
+    "            fc_input_shape.append(fc_shape[i])\n",
+    "            #self.keep_prob = tf.placeholder(tf.float32)\n",
+    "            #self.h_fc1_drop = tf.nn.dropout(self.h_fc1, self.keep_prob)\n",
+    "\n",
+    "        self.W_fc.append(weight_variable([fc_input_shape[-1], fc_shape[-1]]))\n",
+    "        self.b_fc.append(bias_variable([fc_shape[-1]]))\n",
+    "        self.y_conv = tf.matmul(self.layer_input[-1], self.W_fc[-1]) + self.b_fc[-1]\n",
+    "\n",
+    "        self.l2=sum([param_lambda*tf.nn.l2_loss(x) for pom in [self.W_conv,self.W_fc] for x in pom])\n",
+    "\n",
+    "        self.cross_entropy = tf.reduce_mean(\n",
+    "            tf.nn.softmax_cross_entropy_with_logits(labels=self.y_, logits=self.y_conv))+self.l2\n",
+    "        self.train_step = tf.train.AdamOptimizer(1e-4).minimize(self.cross_entropy)\n",
+    "        self.correct_prediction = tf.equal(tf.argmax(self.y_conv, 1), tf.argmax(self.y_, 1))\n",
+    "        self.accuracy = tf.reduce_mean(tf.cast(self.correct_prediction, tf.float32))\n",
+    "\n",
+    "    def train():\n",
+    "        #not done\n",
+    "        with tf.Session() as sess:\n",
+    "          sess.run(tf.global_variables_initializer())\n",
+    "          for i in range(300):\n",
+    "            batch = mnist.train.next_batch(50)\n",
+    "            if i % 100 == 0:\n",
+    "              train_accuracy = accuracy.eval(feed_dict={\n",
+    "                  x: batch[0], y_: batch[1], keep_prob: 1.0})\n",
+    "              print('step %d, training accuracy %g' % (i, train_accuracy))\n",
+    "            train_step.run(feed_dict={x: batch[0], y_: batch[1], keep_prob: 0.5})\n",
+    "\n",
+    "          #print('test accuracy %g' % accuracy.eval(feed_dict={\n",
+    "        #      x: mnist.test.images, y_: mnist.test.labels, keep_prob: 1.0}))"
    ]
   },
   {
@@ -175,10 +201,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convo_network=ConvNet()\n",
+    "convo_network.convolution_graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -199,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
